kubernetes/kubernetes_helm/mariadb/depl/03-phpmyadmin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-pma
  namespace: mariadb
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/instance: mariadb
    app.kubernetes.io/component: phpmyadmin
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/instance: mariadb
    app.kubernetes.io/component: phpmyadmin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-pma
  namespace: mariadb
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/instance: mariadb
    app.kubernetes.io/component: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mariadb
      app.kubernetes.io/instance: mariadb
      app.kubernetes.io/component: phpmyadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mariadb
        app.kubernetes.io/instance: mariadb
        app.kubernetes.io/component: phpmyadmin
    spec:
      enableServiceLinks: false
      containers:
        - name: phpmyadmin
          image: "phpmyadmin/phpmyadmin:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
