kubernetes/kubernetes_helm/mariadb/depl/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mariadb-pma
  namespace: mariadb
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/instance: mariadb
    app.kubernetes.io/component: phpmyadmin
spec:
  tls:
    - hosts:
        - db.test
      secretName: mariadb-tls
  rules:
    - host: db.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mariadb-pma
                port:
                  number: 80
